Show and hide map and table on mobile without Router. Fix page reload.

--- a/app/assets/stylesheets/public/public_table_wrapper.css.scss
+++ b/app/assets/stylesheets/public/public_table_wrapper.css.scss
@@ -1,8 +1,8 @@
 
 /**
- *  Styles for public table showed in public table
- *
- */
+*  Styles for public table showed in public table
+*
+*/
 
 @import "compass/css3/inline-block";
 @import "../old_common/vars";
@@ -17,21 +17,77 @@ html {
 body.public {
   min-width: inherit; /* Public table CSS */
 
+  .PublicMap-map {
+    display: flex;
+    overflow: hidden;
+
+    @media (max-width: $sMedia-desktop) {
+      flex-direction: column;
+    }
+  }
+
+  .map {
+    position: relative;
+    padding: 0;
+
+    .cartodb-map {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   .pane_table {
-    @include reset-table-cell();
-    @include position(8px, calc(35% + 8px), 8px, 8px);
     z-index: 10;
+    flex: 1 1 auto;
     overflow: hidden;
     border-radius: 3px;
+    text-align: left;
 
     &.is-active {
       background: #FFF;
     }
   }
 
+  div.panes {
+    position: initial;
+    max-height: 100%;
+    margin: 8px;
+    clear: both;
+    overflow-x: auto;
+    overflow-y: hidden;
+
+    &:last-child {
+      margin-left: 0;
+    }
+
+    @media (max-width: $sMedia-desktop) {
+      display: none;
+
+      &.is-active {
+        display: block;
+      }
+    }
+
+    div.shadow {
+      display: none;
+    }
+
+    div.table table thead tr th > div > div {
+      position: relative;
+    }
+  }
+
   .pane_map {
+    position: relative;
     top: 0;
+    flex: 1;
+    min-width: 35%;
     overflow-x: hidden;
+
+    @media (max-width: $sMedia-desktop) {
+      min-width: initial;
+    }
   }
 
   .panes .emptyTableContainer {
@@ -148,10 +204,7 @@ body.public {
   .navigation {
     position: relative;
     z-index: 100;
-    width: 100%;
-    margin: auto;
-    clear: both;
-    overflow: hidden;
+    margin: 8px 0 16px;
     opacity: 0;
     text-align: center;
 
@@ -200,50 +253,5 @@ body.public {
     position: relative;
     z-index: 100;
     top: 300px;
-  }
-
-  div.panes {
-    clear: both;
-    overflow-x: auto;
-    overflow-y: hidden;
-
-    div.shadow {
-      display: none;
-    }
-
-    div.table table thead tr th > div > div {
-      position: relative;
-    }
-  }
-
-  div.panes.panes_mobile {
-    top: 0;
-    overflow-x: hidden;
-
-    .table.public {
-      background: #FFF;
-    }
-
-    .Checkbox {
-      position: absolute;
-      z-index: 30;
-      top: 35px;
-      right: 35px;
-      padding: 3px 5px;
-      border-radius: 3px;
-      background-color: rgba(#000, 0.5);
-    }
-
-    .Checkbox-label {
-      color: #FFF;
-    }
-
-    .table.public,
-    .cartodb-map.public {
-      @include position(15px, 15px, 60px, 15px);
-      z-index: 10;
-      overflow: hidden;
-      border-radius: 3px;
-    }
   }
 }
